--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <meta name="theme-color" content="#000000" />
     <link
       rel="icon"
-      type="image/png"
+      type="image/svg"
       sizes="32x32"
-      href="./favicon-32x32.png" />
+      href="./icon-self-care.svg" />
+    <meta name="theme-color" content="#000000" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
